kustomize/overlay/dev/pasan-test-dev-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: pasan-test-dev
  labels:
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_25d97b21-0f94-4051-98e4-58c689ea716a
    environmentId: env_a2d83c10-c3c2-4874-b052-f2c23b986b82
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_a2d83c10-c3c2-4874-b052-f2c23b986b82
    - from:
        - namespaceSelector:
            matchLabels:
              name: skyu-system
    - ports:
        - protocol: UDP
          port: 53
